<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulomain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo_main"
            android:textColor="#888888"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msj_bienvenida"
            android:textColor="#888888"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/tvProvincia"/>

            <Spinner
                android:id="@+id/spProvincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/tvDistrito"/>

            <Spinner
                android:id="@+id/spDistrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </Spinner>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:gravity="center" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvLocales"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="visible"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/boton_continuar" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btContinuar" />


    </RelativeLayout>

</LinearLayout>
